Fix broken occurences of toList()